--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         meses. Depois que completei o período de serviço militar obrigatório na marinha, trabalhei em um posto de gasolina em Palmas
         por alguns meses, depois decidi volta para Lagoa do Tocantins.
     </p>
+    <blockquote>“Investir em conhecimento sempre rende os melhores juros.” –<cite>Benjamin Franklin</cite></blockquote>
 
     <h2>Meus Hobbies</h2>
 
