--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <h1>Minha Primeira Página</h1>
+    
+    <table>
+       <caption><h1>Minha Primeira Página</h1></caption> 
+        <tr>
+            <td><p>GLEISON REIS SOUSA</p>
+            </td>
+            <td>
     <h2>Quem sou eu?</h2>
 
     <p>
@@ -36,12 +42,52 @@
     <p>
         Terminar minha faculdade e conseguir um empregos na área de TI.
         Focar mais em estudos sobre investimentos em renda fixa e variável em especial os fundos imobiliários, para que ao
-        longo do tempo posso alcançar a liberdade finaceira para não depender do governo.
+        longo do tempo posso alcançar a tão sonhada liberdade finaceira.
     </p>
 
     <h2>Contato</h2>
     <p> Celular/Whatsapp: (63) 999235-3995</p>
+         </td>
+        </tr>
+    </table>
 
+    <table border="">
+        <caption>Grade Curricular</caption>
+        <thead>
+        <tr>
+            <th>Materia</th>
+            <th>Período</th>
+            <th>Codígo da Disciplina</th>
+            <th>Professor</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Análise de Sistemas</td>
+            <td>2º P</td>
+            <td>ASI</td>
+            <td>Dr. Gerson Pesente Focking</td>
+        </tr>
+        <tr>
+            <td>Fundamentos e Projetos de Bancos de Dados</td>
+            <td>2º P</td>
+            <td>FBP</td>
+            <td>Esp. Leonardo Jose de Sales</td>
+        </tr>
+        <tr>
+            <td>Introdução à Programação</td>
+            <td>2º P</td>
+            <td>IPG</td>
+            <td>Me. Helder Cleber Almeida Pereira</td>
+        </tr>
+        <tr>
+            <td>Programação Básica para Web</td>
+            <td>2º P</td>
+            <td>PWE</td>
+            <td>Me. Mauro Henrique Lima de Boni</td>
+        </tr>
+    </tbody>
+    </table>
 </body>
 
 </html>
