--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
             </td>
         </tr>
     </table>
+
+   
+     <form action="">
+         <label for="Nome">Nome:</label>
+         <input type="text" id="nome" name="nomeUsuario"><br>
+         <br>
+         <label for="e-mail">E-mail:</label>
+         <input type="text" id="e-mail" name="e-mailUsuario"><br>
+         <br>
+         <label for="mensagem">Mensagem:</label><br>
+         <textarea name="mensagemUsuario" id="mensagem" cols="30" rows="10"></textarea>
+         <input type="submit" value="Enviar">
+        
+    </form>
     <h2>Assuntos que estou estudando</h2>
     <!--1. uma lista com 3 assuntos que vem estudando
         2. cada assunto deverá possuir um link para algum site externo que deverá se mostrado em uma nova aba-->
