--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Document</title>
+    <style>
+
+    </style>
  
 </head>
 
@@ -81,6 +84,7 @@
              </li>
          </ul>
          <input type="submit" value="Enviar">
+         
         
     </form>
     <h2>Assuntos que estou estudando</h2>
