--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
     <blockquote>“Investir em conhecimento sempre rende os melhores juros.” –<cite>Benjamin Franklin</cite>
     </blockquote>
 
+    <h2>Meus Hobbies</h2>
+    
+    <p><ul>
+        <li>Correr</li>
+        <li>Pedalar</li>
+        <li>Investimentos</li>
+        <li>Viajar</li>
+    </ul>
+    </p>
+
+    <h2>Meus Projetos</h2>
+    <p>Primeiramente terminar minha faculdade para conseguir um emprego estável. Focar em estudos sobre Investimentos para conhecer melhor esse mundo dos investimento da bolsa de valores, em especial os fundos imobiliários que geram renda passiva para que ao longo do tempo possar alcançar a liberdade financeira. </p>
+
     <form action="" >
 
         <ul>
