--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                 rel="noopener noreferrer">Modelagem OO com UML</a></li>
         <li><a href="https://sites.google.com/site/fkbancodedados1/modelodados/der" target="_blank"
                 rel="noopener noreferrer">Modelo Relacional - Diagrama Entidade Relacional ou DER</a></li>
-        <li><a href="https://www.devmedia.com.br/while-e-do-while-lacos-de-repeticoes-estrutura-da-linguagem-parte-1/18870"
+        <li id="meu-curriculo"><a href="https://www.devmedia.com.br/while-e-do-while-lacos-de-repeticoes-estrutura-da-linguagem-parte-1/18870"
                 target="_blank" rel="noopener noreferrer">Laço de Repetição while e do-while - java</a> </li>
     </ul>
 
-    <table border="" id="meu-curriculo">
+    <table border="" >
         <caption>Minha Grade Curricular</caption>
         <thead>
             <tr>
