--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
     <h2>Assuntos que pretendo estudar</h2>
     <!--1. lista de 3 assuntos q pretendo ser estudado
        2. cada assunto deverá possuir um link para algum site externo que deverá ser aberto uma nova janela-->
-    <ul>
+    <ul id="meu-curriculo">
         <li><a href="https://web.tecgraf.puc-rio.br/ftp_pub/lfm/CIV2802-ModelagemOrientadaObjetos.pdf" target="_blank"
                 rel="noopener noreferrer">Modelagem OO com UML</a></li>
         <li><a href="https://sites.google.com/site/fkbancodedados1/modelodados/der" target="_blank"
                 rel="noopener noreferrer">Modelo Relacional - Diagrama Entidade Relacional ou DER</a></li>
-        <li id="meu-curriculo"><a href="https://www.devmedia.com.br/while-e-do-while-lacos-de-repeticoes-estrutura-da-linguagem-parte-1/18870"
+        <li><a href="https://www.devmedia.com.br/while-e-do-while-lacos-de-repeticoes-estrutura-da-linguagem-parte-1/18870"
                 target="_blank" rel="noopener noreferrer">Laço de Repetição while e do-while - java</a> </li>
     </ul>
 
