--- a/index.html
+++ b/index.html
@@ -409,10 +409,30 @@
                         rel="noopener noreferrer">Facebook</a></li>
                 <li><a href="https://contate.me/Gleisonreis/" target="_blank" rel="noopener noreferrer">WhatsApp</a>
                 </li>
-               
+                <li><a href="https://br.linkedin.com/in/gleison-reis-sousa-3b1403203/" target="_blank"
+                        rel="noopener noreferrer">LinkedIn</a></li>
             </ul>
         </footer>
     </main>
 </body>
+<script>
+    const numero = prompt("Digite um número e tecle enter");
+    if ( numero>0 ) {
+        if (numero % 2 == 0) {
+            alert(numero+" é positivo e par.");
+        }
+        else{
+            alert(numero+" é positivo e ímpar.");
+        }
+    }
+    else{                                  
+        if ( numero == 0) {
+            alert(numero+" não é par ou impar e nem positivo ou negativo ")
+        }
+        else{
+            alert(numero+" é negativo");
+        }
+    }
+</script>
 
 </html>
